--- a/SM Home.css
+++ b/SM Home.css
@@ -226,3 +226,6 @@ body {
   font-size: 18px;
   font-weight: 800;
 }
+
+@media only screen and (min-device-width 375px) and (max-device-width 812px) and (orientation: portrait) {
+}
