--- a/SM Log-in.css
+++ b/SM Log-in.css
@@ -3,11 +3,11 @@ body {
   font-family: 'Times New Roman', Times, serif;
 }
 
-div {
+.login-box {
   width: 360px;
   height: 620px;
   margin: auto;
-  background-color: cornsilk;
+  background-color: rgb(132, 131, 129);
 }
 
 h1 {
@@ -31,6 +31,16 @@ form input {
 form {
   width: 300px;
   margin-left: 90px;
+}
+
+button {
+  border-radius: 40px;.
+  text-decoration: white;
+  margin-top: 20px;
+  border-radius: 50px;
+  padding: 15px;
+  width: 68%;
+  cursor: pointer
 }
 
 p {
